<resources>
    <string name="app_name">SensorBox</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SensorBox</string>
    <string name="nav_header_subtitle">Creative Motion apps</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="agree">Agree</string>
    <string name="dialog_privacy_policy">In short: Our policy is not to gather data. All the recorded sensor / GPS data are stored only locally for you. We get only technical reports, which are used to fix bugs in the SensorBox. For further details, you can read our policy at website.</string>
    <string name="menu_about">About</string>
    <string name="menu_home">Home</string>
    <string name="menu_advanced">Advanced</string>
    <string name="menu_settings">Settings</string>
    <string name="sensor_info">Sensor information</string>
    <string name="start_measurement">Start measurement</string>
    <string name="activity_permissions_required">Permissions are required</string>
    <string name="activity_permissions_required_text">Main purpose of SensorBox is to record all outputs to csv files.
        For full functionality, the SensorBox needs 3 permissions:\n\n
        \u2022 Storage - to store all csv files recorded by you\n\n
        \u2022 Location - to capture your coordinates, the app need you to provide us unlimited access to GPS at background\n\n
        \u2022 Physical Activity - to capture your changes in state - walking, driving, … - check Activity recognition API in settings\n\n
        \u2022 Body Sensors - to record heart rate on Wear Os device, if available\n\nAny of your recorded data are not shared with us. They are stored only locally in your phone. Recording is started only by you. For more information, you can read our Privacy Policy in \"About\" tab.
    </string>
    <string name="activity_permissions_no">SensorBox will not be fully functional without permissions. If you need to change permissions, visit settings of the app.</string>
    <string name="permission_storage">To store csv files, the app requires storage permission to access memory.\n\nIf you picked \"Do not ask again\" or picked denied multiple times, you will be moved to settings to change the permission.</string>
    <string name="permission_storage_toast">To store csv files, the app requires storage permission to access memory</string>
    <string name="show_permission">Show permission</string>
    <string name="show_permission_settings">Open settings - give permission</string>
    <string name="permission">Permission</string>
    <string name="heart_rate_permission_text">
        In order to get heart rate values and save them to csv file, the heart rate sensor requires \"Body sensors\".
        \n\nIf you picked \"Do not ask again\" or picked denied multiple times, you will be moved to settings to change the permission.</string>
    <string name="heart_rate_permission_rational">To use heart rate - Body sensors permission is required</string>
    <string name="agg_name">Gravity</string>
    <string name="acg_name">Acceleration</string>
    <string name="acc_name">Linear\nacceleration</string>
    <string name="gyro_name">Gyroscope</string>
    <string name="magnet_name">Magnetic\ninduction</string>
    <string name="light_name">Lightning</string>
    <string name="proxi_name">Proximity</string>
    <string name="temp_name">Temperature</string>
    <string name="pressure_name">Pressure</string>
    <string name="humi_name">Humidity</string>
    <string name="rotation_name">Rotation\nvector</string>
    <string name="step_counter_name">Step\ncounter</string>
    <string name="step_detector_name">Step\ndetector</string>
    <string name="heart_rate_name">Heart rate</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="sensor_permission">To save sensor data, give SensorBox permission to storage in settings</string>
    <string name="sensor_info_name">Name</string>
    <string name="sensor_info_vendor">Vendor</string>
    <string name="sensor_info_version">Version</string>
    <string name="sensor_info_max_range">Maximal\nrange</string>
    <string name="sensor_info_resolution">Resolution</string>
    <string name="sensor_info_power">Power [mA]</string>
    <string name="sensor_info_min_delay">Minimal\ndelay [µs]</string>
    <string name="sensor_info_max_delay">Maximal\ndelay [µs]</string>
    <string name="sensor_info_float">%.2f</string>
    <string name="zero">0</string>
    <string name="permission_gps_show">To show your location, the permission for location access is required</string>
    <string name="permission_gps">In order to save GPS coordinates on your phone in form of csv, location services have to be enabled in the background.
        \nList of features with usage of location:\n\n
        \u2022 Save coordinates to csv file\n\n
        \u2022 Show your current location on map (only in foreground)\n\n
        The location is accessed in the background only during the measurement, while the notification is visible.
        Therefore, you have to give permissions to use mentioned features.
        \n\nIf you picked \"Do not ask again\" or picked denied multiple times, you will be moved to settings to change the permission.
    </string>
    <string name="permission_gps_android_Q">In order to save GPS coordinates on your phone in form of csv, location services have to be enabled in the background.
        \nList of features with usage of location:\n\n
        \u2022 Save coordinates to csv file\n\n
        \u2022 Show your current location on map (only in foreground)\n\n
        The location is accessed in the background only during the measurement, while the notification is visible.
        Therefore, you have to give permissions to use mentioned features.\n\n
        You will be moved to settings, where you have to give unlimited access to location to the app.
        Unfortunately, Android 10 and higher stops GPS updates, after certain period of time due to the battery restrictions.
        Otherwise, the GPS recording would be redundant.
    </string>
    <string name="permission_notification">
        In order to track the sensors in the background, the app needs to launch background service, which is represented by notification. No activity is taken without your knowledge - notification.
        From Android 13, the notification can be posted only with this permission. To enable this functionality, please enable the notifications.
    </string>
    <string name="gps">GPS</string>
    <string name="sensor_info_GPS_latitude">Latitude</string>
    <string name="sensor_info_GPS_longitude">Longitude</string>
    <string name="sensor_info_GPS_altitude">Altitude [m]</string>
    <string name="sensor_info_GPS_accuracy">Accuracy [m]</string>
    <string name="sensor_info_GPS_speed">Speed [m/s]</string>
    <string name="sensor_info_GPS_bearing">Bearing [°]</string>
    <string name="sensor_info_GPS_provider">Provider</string>
    <string-array name="sensor_info_GPS_array">
        <item>@string/sensor_info_GPS_latitude</item>
        <item>@string/sensor_info_GPS_longitude</item>
        <item>@string/sensor_info_GPS_altitude</item>
        <item>@string/sensor_info_GPS_accuracy</item>
        <item>@string/sensor_info_GPS_speed</item>
        <item>@string/sensor_info_GPS_bearing</item>
        <item>@string/sensor_info_GPS_provider</item>
    </string-array>
    <string name="advanced_button_long_measurement"><![CDATA[Long\nmeasurement\n\n > 60 s]]></string>
    <string name="advanced_button_endless_measurement">Endless\nmeasurement\n\n∞</string>
    <string name="advanced_button_short_measurement"><![CDATA[Short\nmeasurement\n\n < 60 s]]></string>
    <string name="advanced_measurement_picker">Pick measurement</string>
    <string name="advanced_counter_fragment">Pick time intervals</string>
    <string name="advanced_extra_fragment">Options of measurement</string>
    <string name="advanced_time_to_start">Time to\nstart [s]</string>
    <string name="advanced_time_to_measure">Time to\nmeasure [s]</string>
    <string name="advanced_hours">Hours</string>
    <string name="advanced_minutes">Minutes</string>
    <string name="advanced_setup_time">Set up time</string>
    <string name="advanced_time_pass_limit">Unreachable time</string>
    <string name="advanced_recognition_permission">To log movement recognition changes to csv files, the app requires permission for this kind of recognition.\n\nIf you picked \"Do not ask again\" or picked denied multiple times, you will be moved to settings to change the permission.</string>
    <string name="settings_storage">Storage</string>
    <string name="settings_folder_change">Change folder</string>
    <string name="settings_interval_time">Time interval [s]</string>
    <string name="settings_activity_recognition_API">Activity recognition API</string>
    <string name="settings_app">App</string>
    <string name="settings_activity_recognition_preference">About activity recognition</string>
    <string name="settings_custom_annots">Customize annotations</string>
    <string name="settings_csv_formatting">CSV formatting</string>
    <string name="settings_android">Android settings</string>
    <string name="settings_android_open">Open the app in settings</string>
    <string name="settings_android_battery_optimization">Ignore battery optimization</string>
    <string name="settings_wear_os_battery_title">About Wear Os battery optimization</string>
    <string name="settings_annotations">Annotations</string>
    <string name="settings_csv">Data format</string>
    <string name="settings_interval_distance">Distance interval [m]</string>
    <string name="settings_key_folder_change">folder_change</string>
    <string name="settings_key_gps_distance">gps_distance</string>
    <string name="settings_key_gps_time">gps_time</string>
    <string name="settings_key_activity_recognition_period">activity_recognition_period</string>
    <string name="settings_key_about_activity_recognition">about_activity_recognition</string>
    <string name="settings_key_annots">annots</string>
    <string name="settings_key_storage_details">storage_details</string>
    <string name="settings_key_android_settings">android_settings</string>
    <string name="measurement_elapsed_time">Elapsed time</string>
    <string name="measurement_stop_button">Stop\nmeasurement</string>
    <string name="measurement_add_annotation">Add\nannotation</string>
    <string name="intro_policy">Our policy: just fix bugs</string>
    <string name="intro_policy_description">We gather only error messages, which can be used to fix the app. By moving on, you agree to our Privacy Policy &amp; Terms.</string>
    <string name="intro_policy_button">Privacy policy</string>
    <string name="intro_terms_button">Terms of use</string>
    <string name="intro_battery_title">Partial solution</string>
    <string name="intro_battery_description2">To turn off Android power management, click on button above. However, manufacturer side does not have method to turn off. Usually, the way to switch it off is to go to settings -> battery -> and add app to whitelist. Even this does not guarantee proper functionality.</string>
    <string name="intro_ignore_optimizations">Click to\nignore\noptimizations</string>
    <string name="intro_pick_folder">Click to pick folder</string>
</resources>