<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/settings_storage"
        app:icon="@drawable/ic_storage"
        app:layout="@layout/pref_category"
        >

        <Preference
            app:key="@string/settings_key_folder_change"
            app:title="@string/settings_folder_change" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/gps"
        app:icon="@drawable/ic_baseline_gps"
        app:layout="@layout/pref_category">

        <EditTextPreference
            android:inputType="number"
            android:digits="0123456789"
            app:layout="@layout/pref_preference"
            app:key="@string/settings_key_gps_distance"
            app:title="@string/settings_interval_distance"
            app:defaultValue="12"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:inputType="number"
            android:digits="0123456789"
            app:layout="@layout/pref_preference"
            app:key="@string/settings_key_gps_time"
            app:defaultValue="10"
            app:title="@string/settings_interval_time"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_activity_recognition_API"
        app:icon="@drawable/ic_walk"
        app:layout="@layout/pref_category">

        <EditTextPreference
            android:digits="0123456789"
            android:inputType="number"
            app:layout="@layout/pref_preference"
            app:defaultValue="30"
            app:key="@string/settings_key_activity_recognition_period"
            app:title="@string/settings_interval_time"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="@string/settings_key_about_activity_recognition"
            app:title="@string/settings_activity_recognition_preference" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_annotations"
        app:icon="@drawable/ic_pen"
        app:layout="@layout/pref_category">
        <Preference
            app:key="@string/settings_key_annots"
            app:title="@string/settings_custom_annots" />
    </PreferenceCategory>
    <PreferenceCategory
        app:icon="@drawable/ic_baseline_storage"
        app:layout="@layout/pref_category"
        app:title="@string/settings_csv">
        <Preference
            app:key="@string/settings_key_storage_details"
            app:title="@string/settings_csv_formatting" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_android"
        app:layout="@layout/pref_category"
        app:title="@string/settings_android">
        <Preference
            app:key="@string/settings_key_android_settings"
            app:title="@string/settings_android_open" />
        <Preference
            app:key="battery_settings"
            app:title="@string/settings_android_battery_optimization" />
        <Preference
            app:key="wear_os_battery"
            app:title="@string/settings_wear_os_battery_title" />
    </PreferenceCategory>
</PreferenceScreen>